# HomologyInference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  grsi-install.sh  grsi-run.sh  install.sh
apps/: bob_donut.cc  dog_elephant.cc  double_torus_twists.cc  functional_maps.cc  landmarks.cc  mother_and_child.cc  nn_projection.cc  pretzel_three_hole.cc
cmake/: FindGurobi.cmake
data/: bob_tri_donut.pinned  bob_tri_on_donut.vtpm  dog_on_elephant.vtpm  donut_bob.pinned  double_torus_round_iso_on_blocky_full_twist.vtpm  double_torus_round_iso_on_blocky_half_twist.vtpm  double_torus_round_iso_on_blocky_handle_twist.vtpm  double_torus_round_iso_on_blocky_id.vtpm  eiffel_tower.pinned  komainu_fmap.mat  mac_blocky_on_smooth_noisy.vtpm  mac_blocky_on_smooth_twisted.vtpm  pretzel_on_three_hole_smooth.vtpm  pyramid_frame.pinned  shrec07_105.off  shrec07_105.vts  shrec07_108.off  shrec07_108.vts
src/HomologyInference/: BlockedProperty.cc  BlockedProperty.hh  CohomologyBasis.cc  CohomologyBasis.hh  DualPath.cc  DualPath.hh  FunctionalMaps.cc  FunctionalMaps.hh  Genus.cc  Genus.hh  HomologyBasis.cc  HomologyBasis.hh  HomologyInference.cc  HomologyInference.hh  IntegerMatrix.cc  IntegerMatrix.hh  PrimalPath.cc  PrimalPath.hh  Types.hh  VertexToPointMap.cc  VertexToPointMap.hh
src/HomologyInference/Utils/: AnsiColorCodes.hh  BarycentricPoint.hh  CotanWeights.cc  CotanWeights.hh  ExternalProperty.hh  Filesystem.hh  Hash.hh  Helpers.cc  Helpers.hh  IO.cc  IO.hh  MeshNormalization.cc  MeshNormalization.hh  Out.hh  Round.cc  Round.hh  Timer.hh  UnionFind.cc  UnionFind.hh
src/HomologyInference/Viewer/: ComplexColors.cc  ComplexColors.hh  GlowDraw.cc  GlowDraw.hh  HomologyInferenceView.cc  HomologyInferenceView.hh  IDraw.hh  MeshView.cc  MeshView.hh  RWTHColorGenerator.cc  RWTHColorGenerator.hh  RWTHColors.hh  View.cc  View.hh  XYZColors.cc  XYZColors.hh
